--- a/JSFOUNDATION/part8/dom.html
+++ b/JSFOUNDATION/part8/dom.html
@@ -37,7 +37,7 @@
     <section id="example-2">
       <h2>Traversing the DOM</h2>
       <ul id="citiesList">
-        <li class="chai">New York</li>
+        <li>New York</li>
         <li>Tokyo</li>
         <li>Paris</li>
         <li>London</li>
