--- a/js-projects/04_expense_tracker/index.html
+++ b/js-projects/04_expense_tracker/index.html
@@ -22,7 +22,7 @@
           placeholder="Amount"
           required
         />
-        <button type="submit">Add Expense</button>
+        <button type="submit" id="add-expense-btn">Add Expense</button>
       </form>
 
       <h2>Expenses</h2>
